# ferrous-framework

./: Cargo.toml  README.md  build.rs
assets/fws_ui/: fws.css  fws.js  index.html  logs.html
src/: bridge.rs  lib.rs  native_host.rs  native_peer.rs  native_proc.rs  native_runtime.rs  peer_protocol.rs  shellspec.rs  shutdown.rs
testdata/: shellspec_parity_cases.json
tests/: bridge_info.rs  native_host.rs  native_manager.rs  native_proc.rs  shellspec_parity.rs  shutdown_result.rs
