[package]
name = "ferrous_framework"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/mrsurge/ferrous-framework"
rust-version = "1.93"
description = "Rust runtime path for framework-shells-compatible process management"

[dependencies]
anyhow = "1"
getrandom = "0.3"
nix = { version = "0.30", features = ["fs", "poll", "process", "term"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
